--- a/kyoo-product-site/assets/css/commons/section-content.css
+++ b/kyoo-product-site/assets/css/commons/section-content.css
@@ -66,6 +66,11 @@ section[data-sect-type] div.divided.align-top{
 
 @media(max-width: 480px){
 	section[data-sect-type]{
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		flex-wrap: wrap;
+		flex-direction: row;
 		padding-top: 50px;
 		padding-bottom: 50px;
 		min-height: 100vh !important;
